@@ -350,9 +350,9 @@ CONFIG_STM32_ADC3_SAMPLE_FREQUENCY=100
 #
 # The STM3240G-Eval has no real on-board PWM devices, but the board can be configured to output
 # a pulse train using several options (see board.h).  Here the default setup is for TIM8, CH4.
-# Don't forget to enable CONFIG_STM32_TIM8.
+# Don't forget to enable CONFIG_PWM and CONFIG_STM32_TIM8.
 #
-CONFIG_PWM=y
+CONFIG_PWM=n
 CONFIG_PWM_PULSECOUNT=y
 CONFIG_STM32_TIM8_PWM=y
 CONFIG_STM32_TIM8_CHANNEL=4
